--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,8 +12,12 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+
+
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+// there should be 2 or 3 more lines that start with 'apply plugin:' here
+
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -23,10 +27,21 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url = "https://repo.dairy.foundation/releases"
+    }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
 
     implementation 'dev.nextftc:ftc:1.0.0'
     implementation 'dev.nextftc:hardware:1.0.0' // If you would like to use the hardware module
     implementation 'dev.nextftc.extensions:pedro:1.0.0'
+
+
+
+
+
 }
